tests/NormalTests/paczka2/big_fuzzy/80890167.err
Error in line 4: mIIzWMEcWb S840 17,8
Error in line 6: Xhv S920 92,5
Error in line 26: S920 S840 22,7
Error in line 31: a1jPtZ2o S796 29,2
Error in line 49: 5cj3y8aQ7 S796 -1,9
Error in line 52: mIIzWMEcWb S920 37,6
Error in line 58: nXGEMTrwl S920 73,27
Error in line 63: nXGEMTrwl S796 80,5
Error in line 72: 5cj3y8aQ7 S796 30,6
Error in line 75: NlqhMMm S920 -2,9
Error in line 84: NlqhMMm S840 18,1
Error in line 76: a1jPtZ2o S920 61,4
Error in line 92: NlqhMMm A1C4 54,4
Error in line 99: NlqhMMm S920 39,8
Error in line 109: mIIzWMEcWb A184 94,8
Error in line 106: S920 A184 33,7
Error in line 118: nXGEMTrwl S796 76,0
Error in line 122: nXGEMTrwl A184 35,5
Error in line 124: nXGEMTrwl S840 94,0
Error in line 123: NlqhMMm S920 93,8
Error in line 126: nXGEMTrwl S920 0,6
Error in line 130: a1jPtZ2o S920 39,1
Error in line 127: NlqhMMm S796 31,1
Error in line 139: mIIzWMEcWb S920 86,1
Error in line 138: nXGEMTrwl A184 10,8
Error in line 136: NlqhMMm S840 53,3
Error in line 120: S920 S840 39,3
Error in line 151: 5cj3y8aQ7 S840 0,85
Error in line 146: NlqhMMm S796 69,0
Error in line 160: a1jPtZ2o S796 -1,7
Error in line 162: NlqhMMm S920 0,0
Error in line 147: 5cj3y8aQ7 S840 1,2
Error in line 170: nXGEMTrwl S840 57,6
Error in line 174: S920 S796 22,2
Error in line 173: nXGEMTrwl S796 46,1
Error in line 184: NlqhMMm A184 14,3
Error in line 178: S920 A184 62,0
Error in line 200: nXGEMTrwl S840 1,0
Error in line 199: S920 S840 11,0
Error in line 205: 5cj3y8aQ7 S796 34,3
Error in line 207: S920 A184 161,5
Error in line 218: a1jPtZ2o S920 66,9
Error in line 215: NlqhMMm S920 20,7
Error in line 216: S920 A184 740,8
Error in line 232: 5cj3y8aQ7 S920 31,4
Error in line 241: NlqhMMm S920 2,6
Error in line 244: nXGEMTrwl A184 29,6
Error in line 235: 5cj3y8aQ7 S796 36,6
Error in line 246: 5cj3y8aQ7 S840 32,0
Error in line 249: nXGEMTrwl S92( 158,6
